--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
 
                 <form action="/short" method="POST">
                     <input type="text" placeholder="Enter your URL here ..." name="url">
-                    <button class="btn">Shotner</button>
+                    <button class="btn">Shortener</button>
                 </form>
 
                 <% if(url){ %>
